Analyse_Syntaxique/syntaxe.output
Terminaux inutilisés dans la grammaire

   t_SPACE
   t_NL


État 13 conflits: 3 décalage/réduction


Grammaire

    0 $accept: Prog $end

    1 $@1: %empty

    2 Prog: t_MAIN $@1 t_PO t_PF t_AO Body t_AF

    3 $@2: %empty

    4 $@3: %empty

    5 If: t_IF t_PO Condition t_PF $@2 t_AO BodyIF t_AF $@3 SuiteIf

    6 $@4: %empty

    7 $@5: %empty

    8 While: t_WHILE t_PO Condition t_PF $@4 t_AO BodyIF $@5 t_AF

    9 Body: Declarations Instructions

   10 BodyIF: Declarations Instructions
   11       | Instructions

   12 Declarations: Declaration
   13             | Declaration Declarations

   14 Instructions: Instruction
   15             | Instruction Instructions

   16 Declaration: t_INT t_ID
   17            | t_CONST Declaration
   18            | Declaration t_EQUAL t_DECIMALE
   19            | Declaration t_COMMA t_ID
   20            | Declaration t_DC

   21 Instruction: t_PRINTF t_PO Expression t_PF t_DC
   22            | t_ID t_EQUAL Expression t_DC
   23            | If
   24            | While

   25 SuiteIf: t_ELSE t_AO BodyIF t_AF
   26        | t_ELSE If
   27        | %empty

   28 Condition: Expression t_EQUAL t_EQUAL Expression
   29          | Expression t_INF Expression
   30          | Expression t_SUP Expression
   31          | Expression t_INF t_EQUAL Expression
   32          | Expression t_SUP t_EQUAL Expression

   33 Expression: t_DECIMALE
   34           | t_ID
   35           | Expression t_PLUS Expression
   36           | Expression t_MINUS Expression
   37           | Expression t_MUL Expression
   38           | Expression t_DIV Expression
   39           | t_PO Expression t_PF


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
t_MAIN (258) 2
t_AO (259) 2 5 8 25
t_AF (260) 2 5 8 25
t_CONST (261) 17
t_INT (262) 16
t_ID (263) 16 19 22 34
t_PLUS (264) 35
t_MINUS (265) 36
t_MUL (266) 37
t_DIV (267) 38
t_EQUAL (268) 18 22 28 31 32
t_PO (269) 2 5 8 21 39
t_PF (270) 2 5 8 21 39
t_SPACE (271)
t_COMMA (272) 19
t_NL (273)
t_DC (274) 20 21 22
t_PRINTF (275) 21
t_DECIMALE (276) 18 33
t_IF (277) 5
t_INF (278) 29 31
t_SUP (279) 30 32
t_ELSE (280) 25 26
t_WHILE (281) 8


Non-terminaux, suivis des règles où ils apparaissent

$accept (27)
    à gauche: 0
Prog (28)
    à gauche: 2, à droite: 0
$@1 (29)
    à gauche: 1, à droite: 2
If (30)
    à gauche: 5, à droite: 23 26
$@2 (31)
    à gauche: 3, à droite: 5
$@3 (32)
    à gauche: 4, à droite: 5
While (33)
    à gauche: 8, à droite: 24
$@4 (34)
    à gauche: 6, à droite: 8
$@5 (35)
    à gauche: 7, à droite: 8
Body (36)
    à gauche: 9, à droite: 2
BodyIF (37)
    à gauche: 10 11, à droite: 5 8 25
Declarations (38)
    à gauche: 12 13, à droite: 9 10 13
Instructions (39)
    à gauche: 14 15, à droite: 9 10 11 15
Declaration (40)
    à gauche: 16 17 18 19 20, à droite: 12 13 17 18 19 20
Instruction (41)
    à gauche: 21 22 23 24, à droite: 14 15
SuiteIf (42)
    à gauche: 25 26 27, à droite: 5
Condition (43)
    à gauche: 28 29 30 31 32, à droite: 5 8
Expression (44)
    à gauche: 33 34 35 36 37 38 39, à droite: 21 22 28 29 30 31 32
    35 36 37 38 39


État 0

    0 $accept: . Prog $end

    t_MAIN  décalage et aller à l'état 1

    Prog  aller à l'état 2


État 1

    2 Prog: t_MAIN . $@1 t_PO t_PF t_AO Body t_AF

    $défaut  réduction par utilisation de la règle 1 ($@1)

    $@1  aller à l'état 3


État 2

    0 $accept: Prog . $end

    $end  décalage et aller à l'état 4


État 3

    2 Prog: t_MAIN $@1 . t_PO t_PF t_AO Body t_AF

    t_PO  décalage et aller à l'état 5


État 4

    0 $accept: Prog $end .

    $défaut  accepter


État 5

    2 Prog: t_MAIN $@1 t_PO . t_PF t_AO Body t_AF

    t_PF  décalage et aller à l'état 6


État 6

    2 Prog: t_MAIN $@1 t_PO t_PF . t_AO Body t_AF

    t_AO  décalage et aller à l'état 7


État 7

    2 Prog: t_MAIN $@1 t_PO t_PF t_AO . Body t_AF

    t_CONST  décalage et aller à l'état 8
    t_INT    décalage et aller à l'état 9

    Body          aller à l'état 10
    Declarations  aller à l'état 11
    Declaration   aller à l'état 12


État 8

   17 Declaration: t_CONST . Declaration

    t_CONST  décalage et aller à l'état 8
    t_INT    décalage et aller à l'état 9

    Declaration  aller à l'état 13


État 9

   16 Declaration: t_INT . t_ID

    t_ID  décalage et aller à l'état 14


État 10

    2 Prog: t_MAIN $@1 t_PO t_PF t_AO Body . t_AF

    t_AF  décalage et aller à l'état 15


État 11

    9 Body: Declarations . Instructions

    t_ID      décalage et aller à l'état 16
    t_PRINTF  décalage et aller à l'état 17
    t_IF      décalage et aller à l'état 18
    t_WHILE   décalage et aller à l'état 19

    If            aller à l'état 20
    While         aller à l'état 21
    Instructions  aller à l'état 22
    Instruction   aller à l'état 23


État 12

   12 Declarations: Declaration .
   13             | Declaration . Declarations
   18 Declaration: Declaration . t_EQUAL t_DECIMALE
   19            | Declaration . t_COMMA t_ID
   20            | Declaration . t_DC

    t_CONST  décalage et aller à l'état 8
    t_INT    décalage et aller à l'état 9
    t_EQUAL  décalage et aller à l'état 24
    t_COMMA  décalage et aller à l'état 25
    t_DC     décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 12 (Declarations)

    Declarations  aller à l'état 27
    Declaration   aller à l'état 12


État 13

   17 Declaration: t_CONST Declaration .
   18            | Declaration . t_EQUAL t_DECIMALE
   19            | Declaration . t_COMMA t_ID
   20            | Declaration . t_DC

    t_EQUAL  décalage et aller à l'état 24
    t_COMMA  décalage et aller à l'état 25
    t_DC     décalage et aller à l'état 26

    t_EQUAL   [réduction par utilisation de la règle 17 (Declaration)]
    t_COMMA   [réduction par utilisation de la règle 17 (Declaration)]
    t_DC      [réduction par utilisation de la règle 17 (Declaration)]
    $défaut  réduction par utilisation de la règle 17 (Declaration)


État 14

   16 Declaration: t_INT t_ID .

    $défaut  réduction par utilisation de la règle 16 (Declaration)


État 15

    2 Prog: t_MAIN $@1 t_PO t_PF t_AO Body t_AF .

    $défaut  réduction par utilisation de la règle 2 (Prog)


État 16

   22 Instruction: t_ID . t_EQUAL Expression t_DC

    t_EQUAL  décalage et aller à l'état 28


État 17

   21 Instruction: t_PRINTF . t_PO Expression t_PF t_DC

    t_PO  décalage et aller à l'état 29


État 18

    5 If: t_IF . t_PO Condition t_PF $@2 t_AO BodyIF t_AF $@3 SuiteIf

    t_PO  décalage et aller à l'état 30


État 19

    8 While: t_WHILE . t_PO Condition t_PF $@4 t_AO BodyIF $@5 t_AF

    t_PO  décalage et aller à l'état 31


État 20

   23 Instruction: If .

    $défaut  réduction par utilisation de la règle 23 (Instruction)


État 21

   24 Instruction: While .

    $défaut  réduction par utilisation de la règle 24 (Instruction)


État 22

    9 Body: Declarations Instructions .

    $défaut  réduction par utilisation de la règle 9 (Body)


État 23

   14 Instructions: Instruction .
   15             | Instruction . Instructions

    t_ID      décalage et aller à l'état 16
    t_PRINTF  décalage et aller à l'état 17
    t_IF      décalage et aller à l'état 18
    t_WHILE   décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 14 (Instructions)

    If            aller à l'état 20
    While         aller à l'état 21
    Instructions  aller à l'état 32
    Instruction   aller à l'état 23


État 24

   18 Declaration: Declaration t_EQUAL . t_DECIMALE

    t_DECIMALE  décalage et aller à l'état 33


État 25

   19 Declaration: Declaration t_COMMA . t_ID

    t_ID  décalage et aller à l'état 34


État 26

   20 Declaration: Declaration t_DC .

    $défaut  réduction par utilisation de la règle 20 (Declaration)


État 27

   13 Declarations: Declaration Declarations .

    $défaut  réduction par utilisation de la règle 13 (Declarations)


État 28

   22 Instruction: t_ID t_EQUAL . Expression t_DC

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 38


État 29

   21 Instruction: t_PRINTF t_PO . Expression t_PF t_DC

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 39


État 30

    5 If: t_IF t_PO . Condition t_PF $@2 t_AO BodyIF t_AF $@3 SuiteIf

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Condition   aller à l'état 40
    Expression  aller à l'état 41


État 31

    8 While: t_WHILE t_PO . Condition t_PF $@4 t_AO BodyIF $@5 t_AF

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Condition   aller à l'état 42
    Expression  aller à l'état 41


État 32

   15 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 15 (Instructions)


État 33

   18 Declaration: Declaration t_EQUAL t_DECIMALE .

    $défaut  réduction par utilisation de la règle 18 (Declaration)


État 34

   19 Declaration: Declaration t_COMMA t_ID .

    $défaut  réduction par utilisation de la règle 19 (Declaration)


État 35

   34 Expression: t_ID .

    $défaut  réduction par utilisation de la règle 34 (Expression)


État 36

   39 Expression: t_PO . Expression t_PF

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 43


État 37

   33 Expression: t_DECIMALE .

    $défaut  réduction par utilisation de la règle 33 (Expression)


État 38

   22 Instruction: t_ID t_EQUAL Expression . t_DC
   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression

    t_PLUS   décalage et aller à l'état 44
    t_MINUS  décalage et aller à l'état 45
    t_MUL    décalage et aller à l'état 46
    t_DIV    décalage et aller à l'état 47
    t_DC     décalage et aller à l'état 48


État 39

   21 Instruction: t_PRINTF t_PO Expression . t_PF t_DC
   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression

    t_PLUS   décalage et aller à l'état 44
    t_MINUS  décalage et aller à l'état 45
    t_MUL    décalage et aller à l'état 46
    t_DIV    décalage et aller à l'état 47
    t_PF     décalage et aller à l'état 49


État 40

    5 If: t_IF t_PO Condition . t_PF $@2 t_AO BodyIF t_AF $@3 SuiteIf

    t_PF  décalage et aller à l'état 50


État 41

   28 Condition: Expression . t_EQUAL t_EQUAL Expression
   29          | Expression . t_INF Expression
   30          | Expression . t_SUP Expression
   31          | Expression . t_INF t_EQUAL Expression
   32          | Expression . t_SUP t_EQUAL Expression
   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression

    t_PLUS   décalage et aller à l'état 44
    t_MINUS  décalage et aller à l'état 45
    t_MUL    décalage et aller à l'état 46
    t_DIV    décalage et aller à l'état 47
    t_EQUAL  décalage et aller à l'état 51
    t_INF    décalage et aller à l'état 52
    t_SUP    décalage et aller à l'état 53


État 42

    8 While: t_WHILE t_PO Condition . t_PF $@4 t_AO BodyIF $@5 t_AF

    t_PF  décalage et aller à l'état 54


État 43

   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression
   39           | t_PO Expression . t_PF

    t_PLUS   décalage et aller à l'état 44
    t_MINUS  décalage et aller à l'état 45
    t_MUL    décalage et aller à l'état 46
    t_DIV    décalage et aller à l'état 47
    t_PF     décalage et aller à l'état 55


État 44

   35 Expression: Expression t_PLUS . Expression

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 56


État 45

   36 Expression: Expression t_MINUS . Expression

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 57


État 46

   37 Expression: Expression t_MUL . Expression

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 58


État 47

   38 Expression: Expression t_DIV . Expression

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 59


État 48

   22 Instruction: t_ID t_EQUAL Expression t_DC .

    $défaut  réduction par utilisation de la règle 22 (Instruction)


État 49

   21 Instruction: t_PRINTF t_PO Expression t_PF . t_DC

    t_DC  décalage et aller à l'état 60


État 50

    5 If: t_IF t_PO Condition t_PF . $@2 t_AO BodyIF t_AF $@3 SuiteIf

    $défaut  réduction par utilisation de la règle 3 ($@2)

    $@2  aller à l'état 61


État 51

   28 Condition: Expression t_EQUAL . t_EQUAL Expression

    t_EQUAL  décalage et aller à l'état 62


État 52

   29 Condition: Expression t_INF . Expression
   31          | Expression t_INF . t_EQUAL Expression

    t_ID        décalage et aller à l'état 35
    t_EQUAL     décalage et aller à l'état 63
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 64


État 53

   30 Condition: Expression t_SUP . Expression
   32          | Expression t_SUP . t_EQUAL Expression

    t_ID        décalage et aller à l'état 35
    t_EQUAL     décalage et aller à l'état 65
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 66


État 54

    8 While: t_WHILE t_PO Condition t_PF . $@4 t_AO BodyIF $@5 t_AF

    $défaut  réduction par utilisation de la règle 6 ($@4)

    $@4  aller à l'état 67


État 55

   39 Expression: t_PO Expression t_PF .

    $défaut  réduction par utilisation de la règle 39 (Expression)


État 56

   35 Expression: Expression . t_PLUS Expression
   35           | Expression t_PLUS Expression .
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression

    t_MUL  décalage et aller à l'état 46
    t_DIV  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 35 (Expression)


État 57

   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   36           | Expression t_MINUS Expression .
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression

    t_MUL  décalage et aller à l'état 46
    t_DIV  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 36 (Expression)


État 58

   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   37           | Expression t_MUL Expression .
   38           | Expression . t_DIV Expression

    $défaut  réduction par utilisation de la règle 37 (Expression)


État 59

   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression
   38           | Expression t_DIV Expression .

    $défaut  réduction par utilisation de la règle 38 (Expression)


État 60

   21 Instruction: t_PRINTF t_PO Expression t_PF t_DC .

    $défaut  réduction par utilisation de la règle 21 (Instruction)


État 61

    5 If: t_IF t_PO Condition t_PF $@2 . t_AO BodyIF t_AF $@3 SuiteIf

    t_AO  décalage et aller à l'état 68


État 62

   28 Condition: Expression t_EQUAL t_EQUAL . Expression

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 69


État 63

   31 Condition: Expression t_INF t_EQUAL . Expression

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 70


État 64

   29 Condition: Expression t_INF Expression .
   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression

    t_PLUS   décalage et aller à l'état 44
    t_MINUS  décalage et aller à l'état 45
    t_MUL    décalage et aller à l'état 46
    t_DIV    décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 29 (Condition)


État 65

   32 Condition: Expression t_SUP t_EQUAL . Expression

    t_ID        décalage et aller à l'état 35
    t_PO        décalage et aller à l'état 36
    t_DECIMALE  décalage et aller à l'état 37

    Expression  aller à l'état 71


État 66

   30 Condition: Expression t_SUP Expression .
   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression

    t_PLUS   décalage et aller à l'état 44
    t_MINUS  décalage et aller à l'état 45
    t_MUL    décalage et aller à l'état 46
    t_DIV    décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 30 (Condition)


État 67

    8 While: t_WHILE t_PO Condition t_PF $@4 . t_AO BodyIF $@5 t_AF

    t_AO  décalage et aller à l'état 72


État 68

    5 If: t_IF t_PO Condition t_PF $@2 t_AO . BodyIF t_AF $@3 SuiteIf

    t_CONST   décalage et aller à l'état 8
    t_INT     décalage et aller à l'état 9
    t_ID      décalage et aller à l'état 16
    t_PRINTF  décalage et aller à l'état 17
    t_IF      décalage et aller à l'état 18
    t_WHILE   décalage et aller à l'état 19

    If            aller à l'état 20
    While         aller à l'état 21
    BodyIF        aller à l'état 73
    Declarations  aller à l'état 74
    Instructions  aller à l'état 75
    Declaration   aller à l'état 12
    Instruction   aller à l'état 23


État 69

   28 Condition: Expression t_EQUAL t_EQUAL Expression .
   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression

    t_PLUS   décalage et aller à l'état 44
    t_MINUS  décalage et aller à l'état 45
    t_MUL    décalage et aller à l'état 46
    t_DIV    décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 28 (Condition)


État 70

   31 Condition: Expression t_INF t_EQUAL Expression .
   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression

    t_PLUS   décalage et aller à l'état 44
    t_MINUS  décalage et aller à l'état 45
    t_MUL    décalage et aller à l'état 46
    t_DIV    décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 31 (Condition)


État 71

   32 Condition: Expression t_SUP t_EQUAL Expression .
   35 Expression: Expression . t_PLUS Expression
   36           | Expression . t_MINUS Expression
   37           | Expression . t_MUL Expression
   38           | Expression . t_DIV Expression

    t_PLUS   décalage et aller à l'état 44
    t_MINUS  décalage et aller à l'état 45
    t_MUL    décalage et aller à l'état 46
    t_DIV    décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 32 (Condition)


État 72

    8 While: t_WHILE t_PO Condition t_PF $@4 t_AO . BodyIF $@5 t_AF

    t_CONST   décalage et aller à l'état 8
    t_INT     décalage et aller à l'état 9
    t_ID      décalage et aller à l'état 16
    t_PRINTF  décalage et aller à l'état 17
    t_IF      décalage et aller à l'état 18
    t_WHILE   décalage et aller à l'état 19

    If            aller à l'état 20
    While         aller à l'état 21
    BodyIF        aller à l'état 76
    Declarations  aller à l'état 74
    Instructions  aller à l'état 75
    Declaration   aller à l'état 12
    Instruction   aller à l'état 23


État 73

    5 If: t_IF t_PO Condition t_PF $@2 t_AO BodyIF . t_AF $@3 SuiteIf

    t_AF  décalage et aller à l'état 77


État 74

   10 BodyIF: Declarations . Instructions

    t_ID      décalage et aller à l'état 16
    t_PRINTF  décalage et aller à l'état 17
    t_IF      décalage et aller à l'état 18
    t_WHILE   décalage et aller à l'état 19

    If            aller à l'état 20
    While         aller à l'état 21
    Instructions  aller à l'état 78
    Instruction   aller à l'état 23


État 75

   11 BodyIF: Instructions .

    $défaut  réduction par utilisation de la règle 11 (BodyIF)


État 76

    8 While: t_WHILE t_PO Condition t_PF $@4 t_AO BodyIF . $@5 t_AF

    $défaut  réduction par utilisation de la règle 7 ($@5)

    $@5  aller à l'état 79


État 77

    5 If: t_IF t_PO Condition t_PF $@2 t_AO BodyIF t_AF . $@3 SuiteIf

    $défaut  réduction par utilisation de la règle 4 ($@3)

    $@3  aller à l'état 80


État 78

   10 BodyIF: Declarations Instructions .

    $défaut  réduction par utilisation de la règle 10 (BodyIF)


État 79

    8 While: t_WHILE t_PO Condition t_PF $@4 t_AO BodyIF $@5 . t_AF

    t_AF  décalage et aller à l'état 81


État 80

    5 If: t_IF t_PO Condition t_PF $@2 t_AO BodyIF t_AF $@3 . SuiteIf

    t_ELSE  décalage et aller à l'état 82

    $défaut  réduction par utilisation de la règle 27 (SuiteIf)

    SuiteIf  aller à l'état 83


État 81

    8 While: t_WHILE t_PO Condition t_PF $@4 t_AO BodyIF $@5 t_AF .

    $défaut  réduction par utilisation de la règle 8 (While)


État 82

   25 SuiteIf: t_ELSE . t_AO BodyIF t_AF
   26        | t_ELSE . If

    t_AO  décalage et aller à l'état 84
    t_IF  décalage et aller à l'état 18

    If  aller à l'état 85


État 83

    5 If: t_IF t_PO Condition t_PF $@2 t_AO BodyIF t_AF $@3 SuiteIf .

    $défaut  réduction par utilisation de la règle 5 (If)


État 84

   25 SuiteIf: t_ELSE t_AO . BodyIF t_AF

    t_CONST   décalage et aller à l'état 8
    t_INT     décalage et aller à l'état 9
    t_ID      décalage et aller à l'état 16
    t_PRINTF  décalage et aller à l'état 17
    t_IF      décalage et aller à l'état 18
    t_WHILE   décalage et aller à l'état 19

    If            aller à l'état 20
    While         aller à l'état 21
    BodyIF        aller à l'état 86
    Declarations  aller à l'état 74
    Instructions  aller à l'état 75
    Declaration   aller à l'état 12
    Instruction   aller à l'état 23


État 85

   26 SuiteIf: t_ELSE If .

    $défaut  réduction par utilisation de la règle 26 (SuiteIf)


État 86

   25 SuiteIf: t_ELSE t_AO BodyIF . t_AF

    t_AF  décalage et aller à l'état 87


État 87

   25 SuiteIf: t_ELSE t_AO BodyIF t_AF .

    $défaut  réduction par utilisation de la règle 25 (SuiteIf)
